Remove mention of Scala 2.10 and Spark 1.x from docs.