@@ -6,35 +6,14 @@ version 3.1.1 or later installed in order to build ADAM.
 
     **Note:** The default configuration is for Hadoop 2.7.3. If building
     against a different version of Hadoop, please pass
-    ``-Dhadoop.version=<HADOOP_VERSION>`` to the Maven command. ADAM
-    will cross-build for both Spark 1.x and 2.x, but builds by default
-    against Spark 1.6.3. To build for Spark 2, run the
-    ``./scripts/move_to_spark2.sh`` script.
+    ``-Dhadoop.version=<HADOOP_VERSION>`` to the Maven command.
 
 .. code:: bash
 
     git clone https://github.com/bigdatagenomics/adam.git
     cd adam
-    export MAVEN_OPTS="-Xmx512m -XX:MaxPermSize=128m"
-    mvn clean package -DskipTests
+    mvn install
 
-Outputs
-
-::
-
-    ...
-    [INFO] ------------------------------------------------------------------------
-    [INFO] BUILD SUCCESS
-    [INFO] ------------------------------------------------------------------------
-    [INFO] Total time: 9.647s
-    [INFO] Finished at: Thu May 23 15:50:42 PDT 2013
-    [INFO] Final Memory: 19M/81M
-    [INFO] ------------------------------------------------------------------------
-
-You might want to take a peek at the ``scripts/jenkins-test`` script and
-give it a run. It will fetch a mouse chromosome, encode it to ADAM reads
-and pileups, run flagstat, etc. We use this script to test that ADAM is
-working correctly.
 
 Running ADAM
 ------------
@@ -58,10 +37,7 @@ jobs that operate locally. The latter two aliases call scripts that wrap
 the ``spark-submit`` and ``spark-shell`` commands to set up ADAM. You
 will need to have the Spark binaries on your system; prebuilt binaries
 can be downloaded from the `Spark
-website <http://spark.apache.org/downloads.html>`__. Our `continuous
-integration setup <https://amplab.cs.berkeley.edu/jenkins/job/ADAM/>`__
-builds ADAM against Spark versions 1.6.1 and 2.0.0, Scala versions 2.10
-and 2.11, and Hadoop versions 2.3.0 and 2.6.0.
+website <http://spark.apache.org/downloads.html>`__.
 
 Once this alias is in place, you can run ADAM by simply typing
 ``adam-submit`` at the command line.
